--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
-project(SonusVeritas)
+project(Auris)
 
 # Server
 file(GLOB_RECURSE sources RELATIVE ${CMAKE_SOURCE_DIR} *.cpp)
-add_executable(server ${sources})
+add_executable(aurisd ${sources})
