Added automated docuemntation generation to the CMakeLists file

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -7,3 +7,14 @@ add_executable(aurisd ${sources})
 
 find_package (Threads)
 target_link_libraries (aurisd ${CMAKE_THREAD_LIBS_INIT})
+
+# Automatically generate the documentation using Doxygen.
+find_package(Doxygen)
+if (DOXYGEN_FOUND)
+	add_custom_target(doc
+		${DOXYGEN_EXECUTABLE} Doxyfile
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/../doc/
+		COMMENT "Generating API documentation with Doxygen" VERBATIM
+	)
+endif (DOXYGEN_FOUND)
+
