Project now compiles under linux. Issues with the uuid linking resolved.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -5,8 +5,14 @@ project(Auris)
 file(GLOB_RECURSE sources RELATIVE ${CMAKE_SOURCE_DIR} *.cpp)
 add_executable(aurisd ${sources})
 
-find_package (Threads)
-target_link_libraries (aurisd ${CMAKE_THREAD_LIBS_INIT})
+find_package(Threads)
+target_link_libraries(aurisd ${CMAKE_THREAD_LIBS_INIT})
+
+find_package(PkgConfig)
+pkg_check_modules(UUID uuid)
+if (UUID_FOUND)
+	target_link_libraries(aurisd ${UUID_LIBRARIES})
+endif (UUID_FOUND)
 
 # Automatically generate the documentation using Doxygen.
 find_package(Doxygen)
