Added jsoncpp amalgamation. Removed dependency on libconfig++ for now for library subsystems. Later we'll need multiple storage engines for information, one of which - maybe a handcrafted one - should be used for configuration files inside the app.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -31,3 +31,6 @@ if (DOXYGEN_FOUND)
 	)
 endif (DOXYGEN_FOUND)
 
+# Add the third party headers.
+include_directories(${CMAKE_SOURCE_DIR}/../include)
+
