--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,4 +4,5 @@ add_test(test-http ${CMAKE_CURRENT_BINARY_DIR}/test-http)
 add_executable(test-http
 	HTTP.cpp
 	../common/HTTP/HeaderSet.cpp
+	../common/HTTP/Request.cpp
 )
