--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,16 @@
-enable_testing()
-add_test(test-http ${CMAKE_CURRENT_BINARY_DIR}/test-http)
-
 add_executable(test-http
 	HTTP.cpp
 	../common/HTTP/HeaderSet.cpp
 	../common/HTTP/Request.cpp
 )
+
+add_executable(test-database
+	Database.cpp
+	../database/Table.cpp
+	../database/Entry.cpp
+)
+
+find_package(BoehmGC REQUIRED)
+include_directories(${BOEHMGC_INCLUDE_DIRS})
+
+target_link_libraries(test-database ${BOEHMGC_LIBRARIES})
