Fixed coding issues. Added test code for Database::Database.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(test-database
 	../database/Table.cpp
 	../database/Entry/Entry.cpp
 	../database/Entry/Field.cpp
+	../database/Database.cpp
 	../common/tinyxml2.cpp
 )
 
