New database now uses FileSystem and Path classes to manage object storage.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,8 @@ add_executable(test-database
 	../database/Database/Entity.cpp
 	../common/tinyxml2.cpp
 	../common/sha1.cpp
+	../common/FileSystem.cpp
+	../common/Path.cpp
 )
 
 include_directories(../)
