libav is used to detect format of uploaded songs. Uploaded songs produce a metadata entry and are persisted to the media store.

--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -22,9 +22,15 @@ add_executable(${DATABASE_EXEC_NAME}
 	database/Field.cpp
 
 	media/Store.cpp
+	library/Library.cpp
+	library/Song.cpp
 )
 include_directories(../)
 
 find_package(BoehmGC REQUIRED)
 target_link_libraries(${DATABASE_EXEC_NAME} ${BOEHMGC_LIBRARIES})
 include_directories(${BOEHMGC_INCLUDE_DIRS})
+
+find_package(LibAV REQUIRED)
+target_link_libraries(${DATABASE_EXEC_NAME} ${LIBAV_LIBRARIES})
+include_directories(${LIBAV_INCLUDE_DIRS})
