--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,6 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules")
 
 # Add the three components
 #add_subdirectory(controller)
-#add_subdirectory(player)
+add_subdirectory(player)
 add_subdirectory(database)
 add_subdirectory(tests)
