Added HTTP errors to simplify connection code.

--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable(${DATABASE_EXEC_NAME}
 	../common/HTTP/Request.cpp
 	../common/HTTP/Response.cpp
 	../common/HTTP/HeaderSet.cpp
+	../common/HTTP/Error.cpp
 	../common/Path.cpp
 	../common/FileSystem.cpp
 	../common/sha1.cpp
