--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -1,20 +1,24 @@
 set(DATABASE_EXEC_NAME auris-db)
 add_executable(${DATABASE_EXEC_NAME}
 	main.cpp
-	Connection.cpp
-	Server.cpp
+
 	../common/Socket.cpp
+	../common/Connection.cpp
 	../common/tinyxml2.cpp
 	../common/Error.cpp
 	../common/HTTP/Request.cpp
 	../common/HTTP/Response.cpp
 	../common/HTTP/HeaderSet.cpp
 	../common/HTTP/Error.cpp
+	../common/HTTP/Connection.cpp
 	../common/Path.cpp
 	../common/FileSystem.cpp
 	../common/sha1.cpp
 	../common/sha1_utils.cpp
 	../common/uuid.cpp
+	
+	Connection.cpp
+	Server.cpp
 
 	database/Database.cpp
 	database/Table.cpp
