Added basic encoding tools. coding::Encoder is able to produce YAML and JSON data.

--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -16,7 +16,10 @@ add_executable(${DATABASE_EXEC_NAME}
 	../common/sha1.cpp
 	../common/sha1_utils.cpp
 	../common/uuid.cpp
-	
+	../common/coding/Encoder.cpp
+	../common/coding/YAMLEncoder.cpp
+	../common/coding/JSONEncoder.cpp
+
 	Connection.cpp
 	Server.cpp
 
