Implemented PUT /metadata/... in database. Connection should react to Expect: 100-continue header appropriately.

--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(${DATABASE_EXEC_NAME}
 	../common/coding/YAMLEncoder.cpp
 	../common/coding/JSONEncoder.cpp
 	../common/coding/XMLEncoder.cpp
+	../common/coding/Decoder.cpp
+	../common/coding/XMLDecoder.cpp
 	../common/MimeType.cpp
 
 	Connection.cpp
