--- a/source/db/CMakeLists.txt
+++ b/source/db/CMakeLists.txt
@@ -2,4 +2,7 @@
 # This file configures the build of the database library. It contains all the
 # code associated with creating, maintaining and using a database.
 
-add_library(db )
+add_library(db Database.cpp)
+
+add_executable(dbtool tool.cpp)
+target_link_libraries(dbtool db ${Boost_LIBRARIES})
