Added UUID to libcommon.

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -2,4 +2,4 @@
 # This file configures the build of the various command line tools of Auris.
 
 add_executable(adb-add db-add.cpp)
-target_link_libraries(adb-add ${Boost_LIBRARIES})
+target_link_libraries(adb-add ${Boost_LIBRARIES} common)
