--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,5 +2,6 @@
 # This file aggregates the subdirectories of "source" that need to be built.
 # Refer to the CMakeLists.txt of each subdirectory for more information.
 
+add_subdirectory(common)
 add_subdirectory(db)
 add_subdirectory(tools)
