rewrote FindLibUUID.cmake
New version is simple and concise, and uses proper CMake helpers. Tested on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules")
 
 # Find the required packages and configure the include directories.
 find_package(Boost REQUIRED COMPONENTS filesystem system program_options)
+find_package(LibUUID REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${Boost_INCLUDE_DIRS} ${LibUUID_INCLUDE_DIRS})
 include_directories(source)
 
 
