libcommon now uses new libuuid module
Properly links the found libuuid.

--- a/source/common/CMakeLists.txt
+++ b/source/common/CMakeLists.txt
@@ -2,3 +2,4 @@
 # This file configures the build of the common class and function library.
 
 add_library(common uuid.cpp)
+target_link_libraries(common ${LIBUUID_LIBRARIES})
