rewrote track index reading/writing
Added db/file/Index.hpp and db/file/Generic.hpp which implement reading and writing the database's current index object. The Generic class provides facilities useful to other objects that follow in the future. Renamed adb-add to db-add and added proper timestamping as well as a track listing function.

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Copyright (c) 2013 Fabian Schuiki
 # This file configures the build of the various command line tools of Auris.
 
-add_executable(adb-add db-add.cpp)
-target_link_libraries(adb-add ${Boost_LIBRARIES} common)
+add_executable(db-add db-add.cpp)
+target_link_libraries(db-add ${Boost_LIBRARIES} common)
