added db-meta command
Added db-meta.cpp which implements a command that allows for track metadata to be displayed (implemented) and modified (not implemented).

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -2,4 +2,6 @@
 # This file configures the build of the various command line tools of Auris.
 
 add_executable(db-add db-add.cpp)
+add_executable(db-meta db-meta.cpp)
 target_link_libraries(db-add ${Boost_LIBRARIES} common)
+target_link_libraries(db-meta ${Boost_LIBRARIES} common)
