added db-list tool
Added the db-list.cpp tool that lists a database's track index. This is basically and extracted version of the listing code from db-add.cpp, but now using the aux/mapfile functions to make the code more readable.added db-list tool.

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -3,5 +3,7 @@
 
 add_executable(db-add db-add.cpp)
 add_executable(db-meta db-meta.cpp)
+add_executable(db-list db-list.cpp)
 target_link_libraries(db-add ${Boost_LIBRARIES} common)
 target_link_libraries(db-meta ${Boost_LIBRARIES} common)
+target_link_libraries(db-list ${Boost_LIBRARIES} common)
