added db-hash-object and db-cat-object tools
The db-hash-object.cpp tool allows for an object to be hashed and written to the database. The db-cat-object.cpp tool allows for an object to be retrieved from the database by hash. The objects are prefixed with a header describing its type.

These two functions read/write objects in a objects/<hash:0:2>/<hash:2> structure. This is identical to git. In general, the above tools correspond vaguely to git hash-object and git cat-file, respectively.

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -4,6 +4,11 @@
 add_executable(db-add db-add.cpp)
 add_executable(db-meta db-meta.cpp)
 add_executable(db-list db-list.cpp)
+add_executable(db-hash-object db-hash-object.cpp)
+add_executable(db-cat-object db-cat-object.cpp)
+
 target_link_libraries(db-add ${Boost_LIBRARIES} common)
 target_link_libraries(db-meta ${Boost_LIBRARIES} common)
 target_link_libraries(db-list ${Boost_LIBRARIES} common)
+target_link_libraries(db-hash-object ${Boost_LIBRARIES} common)
+target_link_libraries(db-cat-object ${Boost_LIBRARIES} common)
