added installation for db
Added the install() command to source/db's CMakeLists.txt which now properly
copies the headers of the database library to include/auris. Not more to be
done yet, since the db is a header-only library.

--- a/source/db/CMakeLists.txt
+++ b/source/db/CMakeLists.txt
@@ -2,3 +2,4 @@
 # This file configures the build of the database library. It contains all the
 # code associated with creating, maintaining and using a database.
 
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include/auris FILES_MATCHING PATTERN *.hpp)
